Fix images and urls

--- a/content/blog/nw2018.md
+++ b/content/blog/nw2018.md
@@ -13,6 +13,6 @@ author: Shane Lee
 weight: 2
 ---
 
-<img src="/img/blog/20180602-1.jpg" class="img-responsive" alt="Naked Waiters at Homestead">
+<img src="/img/blog/20180602-1.jpg" class="img-responsive" alt="Naked Waiters at Homestead" />
 
-JohnJay and I had the great pleasure of running sound for a fun ukelele group called the Naked Waiters at the Homestead Summer Concert Series. They played some fun originals along with their own renditions of pop songs. They're a cool group of guys and a pleasure to work with. Checkout their youtube channel [here](https://www.youtube.com/user/clarktholmes).
+JohnJay and I had the great pleasure of running sound for a fun ukelele group called the Naked Waiters at the Homestead Summer Concert Series. They played some fun originals along with their own renditions of pop songs. They're a cool group of guys and a pleasure to work with. Checkout their youtube channel [HERE](https://www.youtube.com/user/clarktholmes).
